trabalho final/ExemploTDS.java
/* Generated By:JavaCC: Do not edit this line. ExemploTDS.java */
import java.io.*;
import java.util.ArrayList;

class AChamada{
        Tipo tipo;
        String id;
        ArrayList<Arg> args;

        public  String toString()
        {
                String resultado;
                resultado = tipo + " " + id + "(";

                if(args.size() > 0){ //se ha argumentos

                        resultado+= args.get(0) + ", ";

                        for(int i = 1; i < args.size(); i++){
                                if(i == args.size()-1){
                                        resultado += args.get(i);
                                } else {
                                        resultado += args.get(i) + ",";
                                }

                        }
                }
                resultado += ") { \u005cn}";
                return resultado;

        }
}

class Arg{
        Tipo tipo;
        String id;

        public String toString()
        {return (tipo + " " + id);}
}

class Tipo{}

class Int extends Tipo{
        public String toString()
        {return "Int";}
}
class Char extends Tipo{
        public String toString()
        {return "Char";}
}
class Void extends Tipo{
        public String toString()
        {return "Void";}
}



public class ExemploTDS implements ExemploTDSConstants {

  public static void main(String args[]) throws ParseException,IOException {

    ExemploTDS parser = new ExemploTDS(new FileInputStream(args[0]));
    AChamada arvore = parser.Chamada();
        System.out.println(arvore);

    //printer(a);
  }

  static final public AChamada Chamada() throws ParseException {
 AChamada resultado = new AChamada(); Token id;
    resultado.tipo = Tipo();
    id = jj_consume_token(ID);
    jj_consume_token(APAR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VOID:
    case CHAR:
    case INT:
      resultado.args = ListaArgs();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    jj_consume_token(FPAR);
    jj_consume_token(ACHAVES);
    jj_consume_token(FCHAVES);
  resultado.id = id.image;
  {if (true) return resultado;}
    throw new Error("Missing return statement in function");
  }

/*AWHILE While():
{AWHILE resultado = new AWHILE();}
{
	resultado.tipo = 
	
	return resultado;
}*/
  static final public ArrayList<Arg> ListaArgs() throws ParseException {
 ArrayList<Arg> lista = new ArrayList<Arg> (); Arg arg;
    arg = Arg();
                lista.add(arg);
    ListaArgs2(lista);
    {if (true) return lista;}
    throw new Error("Missing return statement in function");
  }

  static final public void ListaArgs2(ArrayList<Arg> lista) throws ParseException {
 Arg arg;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VIRG:
      jj_consume_token(VIRG);
      arg = Arg();
                     lista.add(arg);
      ListaArgs2(lista);
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
  }

  static final public Arg Arg() throws ParseException {
 Arg resultado = new Arg(); Token id;
    resultado.tipo = Tipo();
    id = jj_consume_token(ID);
                resultado.id = id.image;
                {if (true) return resultado;}
    throw new Error("Missing return statement in function");
  }

  static final public Tipo Tipo() throws ParseException {
 Tipo resultado=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
            resultado = new Int();
      break;
    case CHAR:
      jj_consume_token(CHAR);
                                                resultado = new Char();
      break;
    case VOID:
      jj_consume_token(VOID);
                                                                                     resultado = new Void();
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return resultado;}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public ExemploTDSTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[3];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x380,0x1000,0x380,};
   }

  /** Constructor with InputStream. */
  public ExemploTDS(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public ExemploTDS(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ExemploTDSTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public ExemploTDS(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ExemploTDSTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public ExemploTDS(ExemploTDSTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ExemploTDSTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[14];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 3; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 14; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
